// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRow renders with className 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s className"
  data-lego="react"
/>
`;

exports[`FormRow renders with control 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dd
    class="FormRow__control"
    data-lego="react"
  >
    control
  </dd>
</dl>
`;

exports[`FormRow renders with control and passed className to it 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dd
    class="FormRow__control className"
    data-lego="react"
  >
    control
  </dd>
</dl>
`;

exports[`FormRow renders with control and passed controlWidth prop 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dd
    class="FormRow__control"
    data-lego="react"
    style="width:130px"
  >
    control
  </dd>
</dl>
`;

exports[`FormRow renders with control and passed mixes and mods 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dd
    class="FormRow__control FormRow__control_mod block"
    data-lego="react"
    style="width:130px"
  >
    control
  </dd>
</dl>
`;

exports[`FormRow renders with default props 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
/>
`;

exports[`FormRow renders with direction="horizontal" prop 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
/>
`;

exports[`FormRow renders with direction="vertical" prop 1`] = `
<dl
  class="FormRow FormRow_direction_vertical FormRow_size_s"
  data-lego="react"
/>
`;

exports[`FormRow renders with label 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dt
    class="FormRow__label"
    data-lego="react"
    style="width:230px"
  >
    label
  </dt>
</dl>
`;

exports[`FormRow renders with label and passed className to it 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dt
    class="FormRow__label className"
    data-lego="react"
    style="width:230px"
  >
    label
  </dt>
</dl>
`;

exports[`FormRow renders with label and passed labelWidth prop 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dt
    class="FormRow__label"
    data-lego="react"
    style="width:130px"
  >
    label
  </dt>
</dl>
`;

exports[`FormRow renders with label and passed mixes and mods 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <dt
    class="FormRow__label FormRow__label_mod block"
    data-lego="react"
    style="width:130px"
  >
    label
  </dt>
</dl>
`;

exports[`FormRow renders with list 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <div
    class="FormRow__list"
    data-lego="react"
  >
    <div
      class="FormRow__row"
      data-lego="react"
    >
      item1
    </div>
    <div
      class="FormRow__row"
      data-lego="react"
    >
      item2
    </div>
    <div
      class="FormRow__row"
      data-lego="react"
    >
      item3
    </div>
  </div>
</dl>
`;

exports[`FormRow renders with list and passed className 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <div
    class="FormRow__list className"
    data-lego="react"
  >
    <div
      class="FormRow__row"
      data-lego="react"
    >
      раз
    </div>
  </div>
</dl>
`;

exports[`FormRow renders with list and passed mixes and mods 1`] = `
<dl
  class="FormRow FormRow_direction_horizontal FormRow_size_s"
  data-lego="react"
>
  <div
    class="FormRow__list FormRow__list_mod block"
    data-lego="react"
  >
    <div
      class="FormRow__row"
      data-lego="react"
    >
      item1
    </div>
    <div
      class="FormRow__row"
      data-lego="react"
    >
      item2
    </div>
    <div
      class="FormRow__row"
      data-lego="react"
    >
      item3
    </div>
  </div>
</dl>
`;
